--- a/eventBox/Base.lproj/Main.storyboard
+++ b/eventBox/Base.lproj/Main.storyboard
@@ -467,7 +467,7 @@
                                                                             <constraint firstAttribute="height" constant="21" id="CJn-AA-9Am"/>
                                                                         </constraints>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
                                                                     <imageView userInteractionEnabled="NO" alpha="0.10000000000000001" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noun_info_91723" translatesAutoresizingMaskIntoConstraints="NO" id="XYv-QO-EFk">
@@ -483,7 +483,7 @@
                                                                             <constraint firstAttribute="height" constant="21" id="QLL-bQ-Tkn"/>
                                                                         </constraints>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
                                                                 </subviews>
@@ -966,10 +966,10 @@
             </objects>
             <point key="canvasLocation" x="2636" y="1906"/>
         </scene>
-        <!--Message-->
+        <!--Map-->
         <scene sceneID="n33-dT-GFO">
             <objects>
-                <viewController id="bAe-UV-uqh" sceneMemberID="viewController">
+                <viewController id="bAe-UV-uqh" customClass="MapViewController" customModule="eventBox" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ZdV-xg-7I9"/>
                         <viewControllerLayoutGuide type="bottom" id="ccl-Bw-aYk"/>
@@ -977,9 +977,63 @@
                     <view key="view" contentMode="scaleToFill" id="Gpv-5K-KwV">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="tCw-yw-LD7">
+                                <rect key="frame" x="0.0" y="164.5" width="600" height="306.5"/>
+                                <connections>
+                                    <outlet property="delegate" destination="bAe-UV-uqh" id="HSa-V7-33O"/>
+                                </connections>
+                            </mapView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tip-gO-jtm">
+                                <rect key="frame" x="20" y="20" width="560" height="26.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event Address" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ym0-aS-fm0">
+                                <rect key="frame" x="20" y="74" width="560" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TAb-Zj-G8C">
+                                <rect key="frame" x="221" y="112" width="158" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="5cV-M6-Qfz"/>
+                                    <constraint firstAttribute="width" constant="158" id="ILL-2W-69j"/>
+                                </constraints>
+                                <state key="normal" title="Get Directions">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="onGetDirectionsTapped:" destination="bAe-UV-uqh" eventType="touchUpInside" id="W6W-BY-9nr"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Tip-gO-jtm" firstAttribute="leading" secondItem="Gpv-5K-KwV" secondAttribute="leadingMargin" id="76L-8k-tkB"/>
+                            <constraint firstItem="tCw-yw-LD7" firstAttribute="leading" secondItem="Gpv-5K-KwV" secondAttribute="leadingMargin" constant="-20" id="Gg7-B5-Pem"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="tCw-yw-LD7" secondAttribute="trailing" constant="-20" id="K1U-oH-kbS"/>
+                            <constraint firstItem="Ym0-aS-fm0" firstAttribute="leading" secondItem="Gpv-5K-KwV" secondAttribute="leadingMargin" id="N4C-yf-HJp"/>
+                            <constraint firstItem="Tip-gO-jtm" firstAttribute="trailing" secondItem="Gpv-5K-KwV" secondAttribute="trailingMargin" id="Nit-I6-Tb7"/>
+                            <constraint firstItem="ccl-Bw-aYk" firstAttribute="top" secondItem="tCw-yw-LD7" secondAttribute="bottom" constant="80" id="PZ5-oj-JAi"/>
+                            <constraint firstItem="Ym0-aS-fm0" firstAttribute="centerX" secondItem="Gpv-5K-KwV" secondAttribute="centerX" id="UWB-u6-Hgv"/>
+                            <constraint firstItem="Ym0-aS-fm0" firstAttribute="trailing" secondItem="Gpv-5K-KwV" secondAttribute="trailingMargin" id="Ul5-KM-m7n"/>
+                            <constraint firstItem="Tip-gO-jtm" firstAttribute="centerX" secondItem="Gpv-5K-KwV" secondAttribute="centerX" id="b4Y-Iv-NmV"/>
+                            <constraint firstItem="Tip-gO-jtm" firstAttribute="top" secondItem="ZdV-xg-7I9" secondAttribute="bottom" constant="20" id="bwO-Il-Wos"/>
+                            <constraint firstItem="tCw-yw-LD7" firstAttribute="top" secondItem="TAb-Zj-G8C" secondAttribute="bottom" constant="22.5" id="jCQ-yx-1KN"/>
+                            <constraint firstItem="TAb-Zj-G8C" firstAttribute="top" secondItem="Ym0-aS-fm0" secondAttribute="bottom" constant="17.5" id="sv9-1m-SZU"/>
+                            <constraint firstItem="TAb-Zj-G8C" firstAttribute="centerX" secondItem="Gpv-5K-KwV" secondAttribute="centerX" id="wFY-vr-bJ8"/>
+                            <constraint firstItem="Ym0-aS-fm0" firstAttribute="top" secondItem="Tip-gO-jtm" secondAttribute="bottom" constant="27.5" id="xfb-It-kuC"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Message" id="ICh-Qp-YmP"/>
+                    <tabBarItem key="tabBarItem" title="Map" id="ICh-Qp-YmP"/>
+                    <connections>
+                        <outlet property="eventAddressLabel" destination="Ym0-aS-fm0" id="gaq-6y-ngI"/>
+                        <outlet property="eventNameLabel" destination="Tip-gO-jtm" id="5Wv-nG-Oa9"/>
+                        <outlet property="mapView" destination="tCw-yw-LD7" id="GAT-NU-I9f"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rvn-qr-j87" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
