--- a/eventBox/Base.lproj/Main.storyboard
+++ b/eventBox/Base.lproj/Main.storyboard
@@ -1280,7 +1280,7 @@
                                             <constraint firstAttribute="height" constant="64" id="43F-YZ-1np"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                                 <real key="value" value="0.0"/>
@@ -1374,52 +1374,6 @@
                                             <constraint firstAttribute="width" constant="50" id="nc5-4G-BH0"/>
                                         </constraints>
                                     </imageView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ldl-No-hA0">
-                                        <rect key="frame" x="16" y="289" width="566" height="64"/>
-                                        <subviews>
-                                            <imageView userInteractionEnabled="NO" alpha="0.10000000149011612" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noun_bell_10289" translatesAutoresizingMaskIntoConstraints="NO" id="Dsx-U7-ZAH">
-                                                <rect key="frame" x="16" y="8" width="50" height="48"/>
-                                                <color key="tintColor" red="0.92549019610000005" green="0.96862745100000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="50" id="YRi-Vv-oDU"/>
-                                                </constraints>
-                                            </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reminder" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ia7-BJ-ALM">
-                                                <rect key="frame" x="82" y="8" width="82" height="48"/>
-                                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="19"/>
-                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="02o-P7-0dQ">
-                                                <rect key="frame" x="501" y="16" width="51" height="32"/>
-                                                <color key="onTintColor" red="0.35686274509999999" green="1" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
-                                            </switch>
-                                        </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstItem="Dsx-U7-ZAH" firstAttribute="leading" secondItem="Ldl-No-hA0" secondAttribute="leading" constant="16" id="0Sg-TR-22b"/>
-                                            <constraint firstAttribute="height" constant="64" id="8Uw-IR-uoH"/>
-                                            <constraint firstAttribute="bottom" secondItem="02o-P7-0dQ" secondAttribute="bottom" constant="16" id="BeK-z4-F7U"/>
-                                            <constraint firstItem="02o-P7-0dQ" firstAttribute="top" secondItem="Ldl-No-hA0" secondAttribute="top" constant="16" id="C5t-7e-CZd"/>
-                                            <constraint firstItem="Dsx-U7-ZAH" firstAttribute="top" secondItem="Ldl-No-hA0" secondAttribute="top" constant="8" id="DiV-5h-yzt"/>
-                                            <constraint firstAttribute="trailing" secondItem="02o-P7-0dQ" secondAttribute="trailing" constant="16" id="YZE-Gg-Wjo"/>
-                                            <constraint firstItem="ia7-BJ-ALM" firstAttribute="top" secondItem="Ldl-No-hA0" secondAttribute="top" constant="8" id="bMM-Rb-QZm"/>
-                                            <constraint firstAttribute="bottom" secondItem="Dsx-U7-ZAH" secondAttribute="bottom" constant="8" id="f2v-as-Ndl"/>
-                                            <constraint firstAttribute="bottom" secondItem="ia7-BJ-ALM" secondAttribute="bottom" constant="8" id="uVR-AQ-Zxj"/>
-                                            <constraint firstItem="ia7-BJ-ALM" firstAttribute="leading" secondItem="Dsx-U7-ZAH" secondAttribute="trailing" constant="16" id="x5o-1g-rBU"/>
-                                        </constraints>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                                <real key="value" value="2"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                                <color key="value" red="0.92549019610000005" green="0.96862745100000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                <real key="value" value="10"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
-                                    </view>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4" translatesAutoresizingMaskIntoConstraints="NO" id="Mi2-RR-jnO">
                                         <rect key="frame" x="16" y="361" width="566" height="120"/>
                                         <userDefinedRuntimeAttributes>
@@ -1452,38 +1406,79 @@
                                             <action selector="onCreateTapped:" destination="bOD-nt-Ovi" eventType="touchUpInside" id="YfQ-h2-g2B"/>
                                         </connections>
                                     </button>
+                                    <textField opaque="NO" clipsSubviews="YES" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2g2-Dh-Ufq">
+                                        <rect key="frame" x="16" y="289" width="566" height="64"/>
+                                        <color key="backgroundColor" red="0.94283071350000003" green="0.97483544339999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="64" id="Z2B-3Z-pha"/>
+                                            <constraint firstAttribute="height" constant="64" id="neC-Ox-LxH"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                <real key="value" value="0.0"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="10"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="padding">
+                                                <real key="value" value="0.0"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" red="0.35686274509999999" green="1" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="leftPadding">
+                                                <real key="value" value="82"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <outlet property="delegate" destination="bOD-nt-Ovi" id="fUb-6N-EcA"/>
+                                        </connections>
+                                    </textField>
+                                    <imageView userInteractionEnabled="NO" alpha="0.10000000149011612" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noun_map-marker_33043" translatesAutoresizingMaskIntoConstraints="NO" id="QzO-1e-nCj">
+                                        <rect key="frame" x="32" y="296" width="50" height="50"/>
+                                        <color key="tintColor" red="0.92549019610000005" green="0.96862745100000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="Hb3-AA-wDB"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="Mi2-RR-jnO" secondAttribute="trailing" constant="16" id="6CB-yQ-CYR"/>
                                     <constraint firstItem="90j-94-a9N" firstAttribute="bottom" secondItem="Aei-fV-iO7" secondAttribute="bottom" constant="-7" id="89h-3X-AEm"/>
+                                    <constraint firstItem="QzO-1e-nCj" firstAttribute="centerY" secondItem="2g2-Dh-Ufq" secondAttribute="centerY" id="8yd-fC-E5H"/>
                                     <constraint firstItem="90j-94-a9N" firstAttribute="top" secondItem="Aei-fV-iO7" secondAttribute="top" constant="7" id="APC-jW-M2e"/>
+                                    <constraint firstItem="Mi2-RR-jnO" firstAttribute="top" secondItem="2g2-Dh-Ufq" secondAttribute="bottom" constant="8" id="DIl-8V-cGo"/>
                                     <constraint firstItem="bBl-pv-T36" firstAttribute="centerY" secondItem="dve-5z-3Sj" secondAttribute="centerY" id="Duc-7o-bZj"/>
                                     <constraint firstItem="NEO-Tv-63a" firstAttribute="top" secondItem="oF6-E2-laC" secondAttribute="top" constant="27" id="G8w-2J-XsE"/>
                                     <constraint firstAttribute="trailing" secondItem="Aei-fV-iO7" secondAttribute="trailing" constant="16" id="GiZ-vC-HL4"/>
-                                    <constraint firstAttribute="trailing" secondItem="Ldl-No-hA0" secondAttribute="trailing" constant="16" id="Gk0-1D-aBP"/>
                                     <constraint firstItem="bBl-pv-T36" firstAttribute="leading" secondItem="dve-5z-3Sj" secondAttribute="leading" constant="16" id="Hzd-wY-Uux"/>
                                     <constraint firstItem="Aei-fV-iO7" firstAttribute="top" secondItem="3P3-n7-nqK" secondAttribute="bottom" constant="8" id="IWQ-ak-LZv"/>
                                     <constraint firstAttribute="trailing" secondItem="b1N-lK-B0s" secondAttribute="trailing" constant="50" id="J6p-Ri-nMV"/>
                                     <constraint firstItem="3P3-n7-nqK" firstAttribute="top" secondItem="NEO-Tv-63a" secondAttribute="bottom" constant="16" id="JvZ-qm-MPs"/>
                                     <constraint firstItem="NEO-Tv-63a" firstAttribute="leading" secondItem="oF6-E2-laC" secondAttribute="leading" constant="8" id="NPG-B0-cfc"/>
-                                    <constraint firstItem="Mi2-RR-jnO" firstAttribute="top" secondItem="Ldl-No-hA0" secondAttribute="bottom" constant="8" id="ODk-kn-GXH"/>
                                     <constraint firstItem="bBl-pv-T36" firstAttribute="bottom" secondItem="dve-5z-3Sj" secondAttribute="bottom" constant="-7" id="Oiv-GQ-tgp"/>
                                     <constraint firstItem="P2e-9b-RZH" firstAttribute="leading" secondItem="oF6-E2-laC" secondAttribute="leading" constant="8" id="U7z-T5-fm5"/>
                                     <constraint firstItem="CDu-Bu-qZe" firstAttribute="leading" secondItem="Mi2-RR-jnO" secondAttribute="leading" constant="16" id="V4K-Jw-nhw"/>
+                                    <constraint firstAttribute="trailing" secondItem="2g2-Dh-Ufq" secondAttribute="trailing" constant="16" id="Zgj-61-sh3"/>
+                                    <constraint firstItem="2g2-Dh-Ufq" firstAttribute="leading" secondItem="oF6-E2-laC" secondAttribute="leading" constant="16" id="Zhl-AB-cQd"/>
                                     <constraint firstAttribute="trailing" secondItem="NEO-Tv-63a" secondAttribute="trailing" constant="8" id="aPJ-dv-6Ey"/>
                                     <constraint firstItem="CDu-Bu-qZe" firstAttribute="trailing" secondItem="Mi2-RR-jnO" secondAttribute="trailing" id="aaU-Sl-5Hb"/>
+                                    <constraint firstItem="2g2-Dh-Ufq" firstAttribute="top" secondItem="dve-5z-3Sj" secondAttribute="bottom" constant="8" id="bjT-Ao-1pq"/>
+                                    <constraint firstItem="QzO-1e-nCj" firstAttribute="leading" secondItem="2g2-Dh-Ufq" secondAttribute="leading" constant="16" id="bm9-Xp-gyL"/>
                                     <constraint firstItem="CDu-Bu-qZe" firstAttribute="bottom" secondItem="Mi2-RR-jnO" secondAttribute="bottom" id="db6-HC-EGs"/>
                                     <constraint firstItem="dve-5z-3Sj" firstAttribute="top" secondItem="Aei-fV-iO7" secondAttribute="bottom" constant="8" id="ddm-yJ-0tS"/>
+                                    <constraint firstItem="QzO-1e-nCj" firstAttribute="bottom" secondItem="2g2-Dh-Ufq" secondAttribute="bottom" constant="-7" id="eEZ-QK-vYt"/>
+                                    <constraint firstItem="QzO-1e-nCj" firstAttribute="top" secondItem="2g2-Dh-Ufq" secondAttribute="top" constant="7" id="ema-Hi-TDc"/>
                                     <constraint firstItem="P2e-9b-RZH" firstAttribute="top" secondItem="oF6-E2-laC" secondAttribute="top" constant="27" id="fYC-1d-90A"/>
                                     <constraint firstItem="90j-94-a9N" firstAttribute="centerY" secondItem="Aei-fV-iO7" secondAttribute="centerY" id="g6i-Pa-cqY"/>
-                                    <constraint firstItem="Ldl-No-hA0" firstAttribute="top" secondItem="dve-5z-3Sj" secondAttribute="bottom" constant="8" id="gXf-bE-oGt"/>
                                     <constraint firstItem="90j-94-a9N" firstAttribute="leading" secondItem="Aei-fV-iO7" secondAttribute="leading" constant="16" id="gfb-c5-ZW3"/>
                                     <constraint firstAttribute="bottom" secondItem="b1N-lK-B0s" secondAttribute="bottom" constant="32" id="jqR-d1-2zl"/>
                                     <constraint firstItem="dve-5z-3Sj" firstAttribute="leading" secondItem="oF6-E2-laC" secondAttribute="leading" constant="16" id="nll-e8-Pq5"/>
                                     <constraint firstItem="Aei-fV-iO7" firstAttribute="leading" secondItem="oF6-E2-laC" secondAttribute="leading" constant="16" id="o0X-gD-141"/>
                                     <constraint firstItem="CDu-Bu-qZe" firstAttribute="top" secondItem="Mi2-RR-jnO" secondAttribute="top" id="oAC-RU-SJv"/>
-                                    <constraint firstItem="Ldl-No-hA0" firstAttribute="leading" secondItem="oF6-E2-laC" secondAttribute="leading" constant="16" id="pCU-an-WC3"/>
                                     <constraint firstItem="3P3-n7-nqK" firstAttribute="leading" secondItem="oF6-E2-laC" secondAttribute="leading" constant="16" id="qIU-fE-a6E"/>
                                     <constraint firstAttribute="trailing" secondItem="3P3-n7-nqK" secondAttribute="trailing" constant="16" id="sOr-zb-P5u"/>
                                     <constraint firstItem="b1N-lK-B0s" firstAttribute="leading" secondItem="oF6-E2-laC" secondAttribute="leading" constant="50" id="smp-Kf-Jtt"/>
@@ -1510,6 +1505,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="eventAddressTextField" destination="2g2-Dh-Ufq" id="Tbr-1L-cvE"/>
                         <outlet property="eventDateTextField" destination="Aei-fV-iO7" id="1Pe-Sn-upH"/>
                         <outlet property="eventNameTextField" destination="3P3-n7-nqK" id="Qcc-qT-qhH"/>
                         <outlet property="eventTimeTextField" destination="dve-5z-3Sj" id="BKf-A2-Wx0"/>
@@ -1832,13 +1828,13 @@
         <image name="RightAngle" width="84" height="84"/>
         <image name="Shadow" width="10" height="200"/>
         <image name="fb-art" width="200" height="200"/>
-        <image name="noun_bell_10289" width="150" height="150"/>
         <image name="noun_calendar_138379" width="150" height="150"/>
         <image name="noun_check_45890" width="150" height="150"/>
         <image name="noun_clock_200962" width="150" height="150"/>
         <image name="noun_delete_45887" width="150" height="150"/>
         <image name="noun_happy_49834" width="84" height="84"/>
         <image name="noun_info_91723" width="84" height="84"/>
+        <image name="noun_map-marker_33043" width="84" height="84"/>
         <image name="noun_multiply_315673" width="150" height="150"/>
     </resources>
     <inferredMetricsTieBreakers>
